<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/members_homepage" />
        <item
            android:id="@+id/profile"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/members_profile" />
        <item
            android:id="@+id/messages"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/members_messages" />
        <item
            android:id="@+id/events"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/institute_events" />
        <item
            android:id="@+id/athletes"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/institute_athletes" />
        <item
            android:id="@+id/groups"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/members_groups" />

        <item
            android:id="@+id/teams"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/members_teams" />

        <item
            android:id="@+id/coaches"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/members_coaches" />
        <item
            android:id="@+id/institutions"
            android:icon="@drawable/ic_menu_share"
            android:title="Institutions" />

        <item
            android:id="@+id/institution_managers"
            android:icon="@drawable/ic_menu_share"
            android:title="Institution Managers" />
    </group>

    <!--<item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_send" />
        </menu>
    </item>-->

</menu>
